<resources>
    <string name="app_name">逼乎</string>

    <string name="title_activity_launch_page">LaunchPageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="copyright">© Haruue Icymoon</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="login_or_register">登陆或注册</string>
    <string name="launch_motto">让我们在撕逼中寻找答案</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed_for_password_error">帐号或密码错误</string>
    <string name="register_success">注册成功，点击[登录]即可登录您的账户</string>
    <string name="register_failed_for_username_exist">用户名已被占用</string>
    <string name="error_404_apikey">您使用的版本太旧或者服务器发生异常</string>
    <string name="other_server_error">服务器提交了一个问题，我们正在紧张地撰写答案</string>
    <string name="network_error">世界上最遥远的距离就是没网，检查设置</string>
    <string name="login_with_old_token_failed">身份失效，请重新登录</string>
    <string name="username_or_password_empty_error">用户名密码不能为空</string>
    <string name="ask">提问</string>
    <string name="change_face">更换头像</string>
    <string name="logout">登出</string>
    <string name="home">主页面</string>
    <string name="account_manage">账户管理</string>
    <string name="data_empty">暂无数据</string>
    <string name="no_title">无标题</string>
    <string name="empty_content">（无）</string>
    <string name="click_to_log_or_reg">立即注册/登录</string>
    <string name="post_stamp">%1$s 发表于 %2$s</string>
    <string name="load_fail">加载失败</string>
    <string name="load_more">加载更多</string>
    <string name="no_more">没有更多</string>
    <string name="choose">选择</string>
    <string name="save">保存</string>
    <string name="give_up">放弃</string>
    <string name="upload_fail">上传失败</string>
    <string name="modify_face_success">修改头像成功</string>
    <string name="cannot_get_bitmap">失败: 暂时只支持从系统图库中选择图片</string>
    <string name="copy_question_title">复制问题标题</string>
    <string name="copy_question_content">复制问题内容</string>
    <string name="copy_answer">复制这条回答</string>
    <string name="back_to_top">返回顶部</string>
    <string name="title">标题</string>
    <string name="question_title">问题标题</string>
    <string name="question_content">问题内容</string>
    <string name="your_answer">你的回答</string>
    <string name="commit">提交</string>
    <string name="new_question">新问题</string>
    <string name="new_answer">新回答</string>
    <string name="title_cannot_be_empty">标题不能为空</string>
    <string name="commit_question_success">问题提交成功</string>
    <string name="fail_please_retry">失败，请重试</string>
    <string name="answer_content_cannot_be_empty">答案内容不能为空</string>
    <string name="commit_answer_success">提交答案成功</string>
    <string name="granted_permission_failed">对不起，因为无法取得此功能所依赖的权限，您请求的操作无法继续</string>
</resources>
