<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            android:checkable="true"/>

        <item
            android:id="@+id/ask"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/ask"
            android:checkable="true"/>

    </group>

    <item android:title="@string/account_manage">

        <menu>

            <item
                android:id="@+id/set_face"
                android:icon="@drawable/ic_face_black_24dp"
                android:title="@string/change_face"
                android:checkable="true"/>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"
                android:checkable="true"/>

        </menu>

    </item>

</menu>