<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatLabelColor="@color/bihu_blue"
        android:hint="@string/username"
        android:layout="@layout/floatlabel_username"/>

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:floatLabelColor="@color/bihu_blue"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout="@layout/floatlabel_password"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#616161"
            android:text="@string/register"
            android:layout_alignParentLeft="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:text="@string/login"
            android:layout_alignParentRight="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

    </RelativeLayout>

</LinearLayout>