<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_in_item_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/question_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_content"
            android:textSize="15sp"
            android:textColor="@color/gray_800"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:maxLength="100" />

        <TextView
            android:id="@+id/post_stamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_stamp"
            android:textColor="@color/gray_600"
            android:textSize="12sp"
            android:gravity="end"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
