<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_inModifyFace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:title="@string/change_face"
        app:titleTextColor="@color/white"
        android:background="@drawable/toolbar_background_blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <cn.com.caoyue.bihu.ui.widget.CircleImageView
            android:id="@+id/face"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/default_face" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="7dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/blue_500" />

            <TextView
                android:id="@+id/btn_give_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/give_up"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="7dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/red" />

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="7dp"
                android:layout_margin="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/teal_500" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>