<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:hintAnimationEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_question_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_content"
                app:hintAnimationEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="1500"
                    android:inputType="text|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0">

        <TextView
            android:id="@+id/button_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1E88E5"
            android:textSize="14sp"
            android:text="@string/commit"
            android:background="?attr/selectableItemBackground"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/button_give_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#616161"
            android:textSize="14sp"
            android:text="@string/give_up"
            android:background="?attr/selectableItemBackground"
            android:layout_toLeftOf="@id/button_commit"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </RelativeLayout>

</LinearLayout>
